--- a/ОТИ_3_5.ipynb
+++ b/ОТИ_3_5.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "private_outputs": true,
       "provenance": [],
       "authorship_tag": "ABX9TyOD20fpnR31NiSg2KdcKzhX",
       "include_colab_link": true
@@ -24,16 +23,32 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/M2203114/Kopatich/blob/3.5/%D0%9E%D0%A2%D0%98_3_5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/M2203114/Kopatich/blob/main/%D0%9E%D0%A2%D0%98_3_5.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "brfXYspnWuKw"
+        "id": "brfXYspnWuKw",
+        "outputId": "4b7d441c-e0a7-4991-9d2d-695a9406c014",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Энтропия сообщения: 2.0000 бит\n",
+            "Минимально необходимая средняя длина кодовой комбинации: 2.0000 бит\n",
+            "Избыточность используемого алфавита: 33.33%\n",
+            "Фактически затрачивается: 15 бит\n",
+            "При эффективном кодировании должно быть затрачено: 10.0000 бит\n"
+          ]
+        }
+      ],
       "source": [
         "import math\n",
         "\n",
